--- a/RatingYourFeeling/MainPage.xaml
+++ b/RatingYourFeeling/MainPage.xaml
@@ -9,7 +9,7 @@
     xmlns:Charting ="using:WinRTXamlToolkit.Controls.DataVisualization.Charting"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" 
     Loaded="Page_loaded">
-   
+
 
     <Page.Resources>
         <Style x:Key="maxbuttom" TargetType="Button">
@@ -18,12 +18,18 @@
             <Setter Property="FontSize" Value="48%"/>
             <Setter Property="Foreground" Value="White"/>
         </Style>
+        <Style x:Key="functionBtn" TargetType="Button">
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="FontSize" Value="36%"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
     </Page.Resources>
 
     <Grid >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
         <Grid>
             <Grid.RowDefinitions>
@@ -51,23 +57,36 @@
             <Button Style="{StaticResource maxbuttom}" Background="#85C1E9" Grid.Row="8" Content="Really Easy" Click="Really_Easy_Button_Click_1"/>
             <Button Style="{StaticResource maxbuttom}" Background="#7FB3D5" Grid.Row="9" Content="Rest" Click="Rest_Button_Click"/>
         </Grid>
-        
+
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="3*"/>
             </Grid.RowDefinitions>
             <StackPanel>
                 <TextBlock FontSize="100%"  Text="Feeling pick"/>
                 <TextBlock TextAlignment="Center" Margin="50" x:Name="RatingValue" FontSize="120%" Text="{x:Bind ratingValue}" />
             </StackPanel>
-            <Grid Grid.Row="2" >
-                <Charting:Chart x:Name="LineChart" Title ="Rating value" Margin="0" VerticalAlignment="Stretch"  HorizontalAlignment="Stretch">
-                    
-                    <Charting:LineSeries Title="Rate" Margin="0" ItemsSource="{x:Bind LstSource}" IndependentValuePath="Time"  DependentValuePath="Rating" IsSelectionEnabled="True"/>
-                </Charting:Chart>
+            <Grid Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="6*"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="3*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Grid.Column="0" Style="{StaticResource functionBtn}" Background="#7FB3D5" Content="Back" Click="Back_Button_Click"/>
+                    <Button Grid.Column="1" Style="{StaticResource functionBtn}" Background="#7DCEA0" Content="Clean Data" Click="Clean_Button_Click"/>
+                </Grid>
+                <Grid Grid.Row="1">
+                    <Charting:Chart x:Name="LineChart" Title ="Rating value" Margin="0" VerticalAlignment="Stretch"  HorizontalAlignment="Stretch" MaxHeight="500" >
+                        <Charting:LineSeries Title="Rate" ItemsSource="{x:Bind LstSource}" IndependentValuePath="Time"  DependentValuePath="Rating" IsSelectionEnabled="True" VerticalAlignment="Stretch"/>
+                    </Charting:Chart>
+                </Grid>
             </Grid>
-            
+
         </Grid>
     </Grid>
 </Page>
